@@ -47,10 +47,42 @@ class TimestampType extends PGType {
     // amount of seconds between 1970-01-01 and 2000-01-01
     private static final int EPOCH_DIFF = 946684800;
 
+    // 1st msec where BC date becomes AD date
+    private static final long FIRST_MSEC_AFTER_CHRIST = -62135596800000L;
 
     // ISO is the default - postgres allows changing the format but that's currently not supported
-    private static final DateTimeFormatter ISO_FORMATTER = DateTimeFormat.forPattern("YYYY-MM-dd HH:mm:ss.SSS +00 G").withZoneUTC().withLocale(Locale.ENGLISH);
 
+    // For Golang if date is AD (after Christ), era abbreviation is not parsed.
+    private static final DateTimeFormatter ISO_FORMATTER =
+        DateTimeFormat.forPattern("YYYY-MM-dd HH:mm:ss.SSS+00").withZoneUTC().withLocale(Locale.ENGLISH);
+    // For Golang if date is BC (before Christ), era abbreviation needs to be appended.
+    private static final DateTimeFormatter ISO_FORMATTER_WITH_ERA =
+        DateTimeFormat.forPattern("YYYY-MM-dd HH:mm:ss.SSS+00 G").withZoneUTC().withLocale(Locale.ENGLISH);
+
+
+    private static final DateTimeFormatter[] PARSERS_WITHOUT_ERA = generateParseFormatters(false);
+    private static final DateTimeFormatter[] PARSERS_WITH_ERA = generateParseFormatters(true);
+
+    private static DateTimeFormatter[] generateParseFormatters(boolean withEra) {
+        DateTimeFormatter[] formatters = new DateTimeFormatter[10];
+        String prefix = "YYYY-MM-dd HH:mm:ss";
+        String suffix = "ZZ";
+        if (withEra) {
+            suffix = "ZZ G";
+        }
+
+        formatters[0] = DateTimeFormat.forPattern(prefix + suffix).withLocale(Locale.ENGLISH);
+        for (int i = 1; i < 10; i++) { // 1-9 digits for fraction of second
+            StringBuilder pattern = new StringBuilder(prefix);
+            pattern.append('.');
+            for (int j = 1; j <= i; j++) {
+                pattern.append('S');
+            }
+            pattern.append(suffix);
+            formatters[i] = DateTimeFormat.forPattern(pattern.toString()).withLocale(Locale.ENGLISH);
+        }
+        return formatters;
+    }
 
     private TimestampType() {
         super(OID, TYPE_LEN, TYPE_MOD, "timestampz");
@@ -87,13 +119,40 @@ class TimestampType extends PGType {
 
     @Override
     byte[] encodeAsUTF8Text(@Nonnull Object value) {
-        return ISO_FORMATTER.print((long) value).getBytes(StandardCharsets.UTF_8);
+        long msecs = (long) value;
+        if (msecs >= FIRST_MSEC_AFTER_CHRIST) {
+            return ISO_FORMATTER.print(msecs).getBytes(StandardCharsets.UTF_8);
+        } else {
+            return ISO_FORMATTER_WITH_ERA.print(msecs).getBytes(StandardCharsets.UTF_8);
+        }
     }
 
 
     @Override
     Object decodeUTF8Text(byte[] bytes) {
+        // Currently seems that only GoLang prepared statements are sent as TimestampType
+        // Other PostgreSQL clients send the parameter as Bigint or Varchar
         String s = new String(bytes, StandardCharsets.UTF_8);
-        return ISO_FORMATTER.parseMillis(s);
+
+        int endOfSeconds  = s.indexOf(".");
+        int idx = endOfSeconds;
+        if (endOfSeconds > 0) {
+            idx++;
+            while (s.charAt(idx) != '+' && s.charAt(idx) != '-') { // start of timezone
+                idx++;
+            }
+        }
+
+        int fractionDigits = idx - endOfSeconds - 1;
+        fractionDigits = fractionDigits < 0 ? 0 : fractionDigits;
+        if (fractionDigits > 9) {
+            throw new IllegalArgumentException("Cannot parse more than 9 digits for fraction of a second");
+        }
+
+        boolean withEra = s.endsWith("BC") || s.endsWith("AD");
+        if (withEra) {
+            return PARSERS_WITH_ERA[fractionDigits].parseMillis(s);
+        }
+        return PARSERS_WITHOUT_ERA[fractionDigits].parseMillis(s);
     }
 }
